--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.10",
+    "@material-ui/icons": "^4.9.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-icons": "^3.9.0",
     "react-redux": "^7.2.0",
     "react-redux-loading": "^1.0.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "1.1.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
